tests/ui/impl-trait/two_tait_defining_each_other2.next.stderr
error[E0284]: type annotations needed: cannot satisfy `_ == A`
  --> $DIR/two_tait_defining_each_other2.rs:11:8
   |
LL | fn muh(x: A) -> B {
   |        ^ cannot satisfy `_ == A`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
